RW-1112 add counts to encounters options

--- a/ui/src/app/cohort-search/modifier-page/modifier-page.component.html
+++ b/ui/src/app/cohort-search/modifier-page/modifier-page.component.html
@@ -22,7 +22,12 @@
                   (click)="selectChange(opt, i, $event, mod)"
                   class="dropdown-item"
                   type="button"
-                  clrDropdownItem>{{ opt.name}}</button>
+                  clrDropdownItem>
+                  {{ opt.name}}
+                  <span *ngIf="mod.name === 'encounters'" class="badge badge-info">
+                    {{ visitCounts[opt.value] | number }}
+                  </span>
+                </button>
               </clr-dropdown-menu>
             </clr-dropdown>
           </div>
