RW-1107 css changes for dropdown

--- a/ui/src/app/cohort-search/condition-dropdown/condition-dropdown.component.html
+++ b/ui/src/app/cohort-search/condition-dropdown/condition-dropdown.component.html
@@ -1,5 +1,5 @@
 <clr-dropdown>
-    <button type="button" class="btn btn-outline-primary" clrDropdownTrigger>
+    <button type="button" class="btn btn-outline btn-outline-primary" clrDropdownTrigger>
         <span *ngIf = "dropDownSelected !== ''; else elseBlock">{{dropDownSelected}}</span>
         <ng-template #elseBlock>
             <span>Select Vocabulary</span>
