[RW-1073][risk=no] UI for Measurements tree (#1121)
* RW-1073 add redux acctions for measurements api calls

* RW-1073 mock api call for subtree

* RW-1073 load subtree from search, scroll to match

* RW-1073 begin highlighting matches in subtree

* RW-1073 complete highlights for autocomplete matches

* RW-1073 fix import order error

* RW-1073 modify attributes actions for measurements

* RW-1073 add new api call for attributes list

* RW-1073 modify actions for attributes api call

* RW-1073 add mock api call data

* RW-1073 move predefined attributes to constants.ts

* RW-1073 meas attributes changes

* RW-1073 add categorical attributes to form

* RW-1073 fix modal title for measurements attributes

* RW-1073 add labs fields on attributes page

* RW-1073 remove predefinedAttributes references

* RW-1073 fix predifined attributes matching function

* RW-1073 update local csv files

* RW-1073 complete final api count calls

* RW-1073 complete styling and layout

* RW-1073 update local csv files

* RW-1073 fix tooltip display in selection list

* RW-1073 remove test criteria list

* [RW-1217][risk=no] Bump machine size to n1-standard-2 (#1120)

* fix for failing test (#1123)

* RW-1073 add descriptive functions for ngIfs

* [risk=no] Comment out PR template so it's only visible on creation (#1125)

* [RW-968][risk=no] Compile integration tests in Circle (#1126)

* [RW-1220][Risk=no] Add sidebar options (#1124)

* Add sidebar options

* PR comments

* RW-1073 add isPM function

* RW-1230 fixed broken query. (#1127)

* RW-1073 add redux acctions for measurements api calls

* RW-1073 mock api call for subtree

* RW-1073 load subtree from search, scroll to match

* RW-1073 begin highlighting matches in subtree

* RW-1073 complete highlights for autocomplete matches

* RW-1073 fix import order error

* RW-1073 modify attributes actions for measurements

* RW-1073 add new api call for attrib

--- a/ui/src/app/cohort-search/node-info/node-info.component.html
+++ b/ui/src/app/cohort-search/node-info/node-info.component.html
@@ -13,13 +13,11 @@
   </button>
 
   <!-- CODE -->
-  <div class="code font-weight-bold" [innerHTML]="displayCode | safeHtml">
-    {{ displayCode }}
-  </div>
+  <div class="code font-weight-bold" [innerHTML]="displayCode | safeHtml"></div>
 
   <!-- NAME -->
   <div #name
-    [popper]="displayName"
+    [popper]="popperName"
     [popperTrigger]="'hover'"
     [popperPlacement]="'bottom'"
     [popperDisabled]="!isTruncated"
@@ -27,7 +25,7 @@
     [innerHTML]="displayName | safeHtml"></div>
 
   <!-- COUNT -->
-  <div *ngIf="node.get('selectable') && node.get('count') " class="count">
+  <div *ngIf="node.get('selectable')" class="count">
     <span class="text-muted">&#124;</span>
     <span class="badge badge-info">
       <span *ngIf="node.get('group')">~</span>
