--- a/ui/src/app/cohort-search/modal/modal.component.html
+++ b/ui/src/app/cohort-search/modal/modal.component.html
@@ -6,31 +6,26 @@
           <div class="title-bar">
             <div class="btn-group btn-link">
               <ng-container *ngIf="ctype !== criteriaTypes.DEMO">
-
-                <button *ngIf="title !=='Physical Measurements' " type="button" class="btn tab"
-                        [class.active]="mode === 'tree'"
-                        (click)="mode = 'tree'">
+                <button  *ngIf="attributesNode.size === 0"
+                  type="button"
+                  class="btn tab"
+                  [class.active]="mode === 'tree'"
+                  (click)="mode = 'tree'">
                   {{ title }}
                 </button>
-                <ng-container *ngIf="title ==='Physical Measurements' ">
-                  <button  *ngIf="attributesNode.size === 0"  type="button" class="btn tab"
-                          [class.active]="mode === 'tree'"
-                          (click)="mode = 'tree'">
-                    {{ title }}
-                  </button>
-                  <button  *ngIf="attributesNode.size > 0" type="button" class="btn tab-node"
-                           (click)="mode = 'tree'">
-                   {{attributesNode.get('name')}}
-                  </button>
-                </ng-container>
-
+                <button *ngIf="attributesNode.size > 0"
+                  type="button"
+                  class="btn tab-node">
+                  {{attributeTitle}}
+                </button>
 
                 <div *ngIf="ctype !== criteriaTypes.PM" class="vbar"></div>
-                <button type="button" class="btn tab"
-                        *ngIf="ctype !== criteriaTypes.PM"
-                        [class.active]="mode === 'modifiers'"
-                        [disabled]="noSelection"
-                        (click)="mode = 'modifiers'">
+                <button type="button"
+                  class="btn tab"
+                  *ngIf="ctype !== criteriaTypes.PM"
+                  [class.active]="mode === 'modifiers'"
+                  [disabled]="noSelection"
+                  (click)="mode = 'modifiers'">
                   Modifiers
                 </button>
               </ng-container>
@@ -39,11 +34,11 @@
               <a href="https://mor.nlm.nih.gov/RxNav/" target="_blank">
                 Explore
               </a>
-              drugs by brand names outside of AoU
+              drugs by brand names outside of All of Us
             </div>
             <button *ngIf="attributesNode.size > 0"
-                    (click)="back()"
-                    class="btn btn-link btn-icon">
+              (click)="back()"
+              class="btn btn-link btn-icon">
               <clr-icon size="24" shape="close"></clr-icon>
             </button>
           </div>
@@ -66,7 +61,7 @@
                   </div>
                   <!-- Attributes Page -->
                   <div class="panel-left" [class.show]="mode === 'attributes'">
-                    <crit-attributes-page [node]="attributesNode"></crit-attributes-page>
+                    <crit-attributes-page *ngIf="mode === 'attributes'"></crit-attributes-page>
                   </div>
                 </div>
               </ng-container>
