[RW-1112][risk=no] Add encounter type to modifiers - UI (#1128)
* RW-1112 add encounter form group

* RW-1112 load encounters options from api

* RW-1112 modify currentMods func to accept encounters

* RW-1112 add counts to encounters options

* RW-1112 fix lint error

* [RW-1073][risk=no] UI for Measurements tree (#1121)

* RW-1073 add redux acctions for measurements api calls

* RW-1073 mock api call for subtree

* RW-1073 load subtree from search, scroll to match

* RW-1073 begin highlighting matches in subtree

* RW-1073 complete highlights for autocomplete matches

* RW-1073 fix import order error

* RW-1073 modify attributes actions for measurements

* RW-1073 add new api call for attributes list

* RW-1073 modify actions for attributes api call

* RW-1073 add mock api call data

* RW-1073 move predefined attributes to constants.ts

* RW-1073 meas attributes changes

* RW-1073 add categorical attributes to form

* RW-1073 fix modal title for measurements attributes

* RW-1073 add labs fields on attributes page

* RW-1073 remove predefinedAttributes references

* RW-1073 fix predifined attributes matching function

* RW-1073 update local csv files

* RW-1073 complete final api count calls

* RW-1073 complete styling and layout

* RW-1073 update local csv files

* RW-1073 fix tooltip display in selection list

* RW-1073 remove test criteria list

* [RW-1217][risk=no] Bump machine size to n1-standard-2 (#1120)

* fix for failing test (#1123)

* RW-1073 add descriptive functions for ngIfs

* [risk=no] Comment out PR template so it's only visible on creation (#1125)

* [RW-968][risk=no] Compile integration tests in Circle (#1126)

* [RW-1220][Risk=no] Add sidebar options (#1124)

* Add sidebar options

* PR comments

* RW-1073 add isPM function

* RW-1230 fixed broken query. (#1127)

* RW-1073 add redux acctions for measurements api calls

* RW-1073 mock api call for subtree

* RW-107

--- a/ui/src/app/cohort-search/modifier-page/modifier-page.component.html
+++ b/ui/src/app/cohort-search/modifier-page/modifier-page.component.html
@@ -6,64 +6,71 @@
     <div *ngFor="let mod of modifiers; let i = index" [formGroupName]="mod.name">
       <label class="modifier-event-header" [for]="mod.name">{{ mod.label }}</label>
         <div class="modifier-container">
-              <div class="dropdown-width ">
-                <clr-dropdown >
-                  <button type="button" class="btn btn-outline" clrDropdownTrigger>
-                    <span *ngIf = "dropdownOption.selected[i] !== ''; else elseBlock">{{dropdownOption.selected[i]}}</span>
-                    <ng-template #elseBlock>
-                      <span>Select Operator</span>
-                    </ng-template>
-                    <clr-icon shape="caret down"></clr-icon>
-                  </button>
-                  <clr-dropdown-menu  clrPosition="bottom-left" *clrIfOpen>
-                      <button
-                              *ngFor="let opt of mod.operators"
-                              [value]="opt.value"
-                              (click)="selectChange(opt, i, $event, mod)"
-                              class="dropdown-item"
-                              type="button"
-                              clrDropdownItem>{{ opt.name}}</button>
-                  </clr-dropdown-menu>
-                </clr-dropdown>
+          <div class="dropdown-width ">
+            <clr-dropdown >
+              <button type="button" class="btn btn-outline" clrDropdownTrigger>
+                <span *ngIf = "dropdownOption.selected[i] !== ''; else elseBlock">{{dropdownOption.selected[i]}}</span>
+                <ng-template #elseBlock>
+                  <span>Select Operator</span>
+                </ng-template>
+                <clr-icon shape="caret down"></clr-icon>
+              </button>
+              <clr-dropdown-menu  clrPosition="bottom-left" *clrIfOpen>
+                <button
+                  *ngFor="let opt of mod.operators"
+                  [value]="opt.value"
+                  (click)="selectChange(opt, i, $event, mod)"
+                  class="dropdown-item"
+                  type="button"
+                  clrDropdownItem>
+                  {{ opt.name}}
+                  <span *ngIf="mod.name === 'encounters'" class="badge badge-info">
+                    {{ visitCounts[opt.value] | number }}
+                  </span>
+                </button>
+              </clr-dropdown-menu>
+            </clr-dropdown>
+          </div>
+          <ng-container *ngIf="mod.inputType">
+            <div>
+              <input *ngIf="mod.inputType !== 'date'" class="modifier-event-indicator" formControlName="valueA" [type]="mod.inputType">
+            </div>
+            <div *ngIf="mod.inputType === 'date'" >
+              <input class="modifier-calender" formControlName="valueA" [type]="mod.inputType" type="date" clrDate>
+            </div>
+            <ng-container  *ngIf="dropdownOption.selected[i] === 'Between'">
+              <div class="and-text">
+                <div>and</div>
               </div>
               <div>
-                <input *ngIf = "mod.inputType !== 'date'" class="modifier-event-indicator" formControlName="valueA" [type]="mod.inputType">
+                <input *ngIf="mod.inputType !== 'date'"  class="modifier-event-indicator" formControlName="valueB" [type]="mod.inputType">
               </div>
-              <div *ngIf = "mod.inputType === 'date'" >
-                <input class="modifier-calender" formControlName="valueA" [type]="mod.inputType" type="date" clrDate>
+            </ng-container>
+            <ng-container *ngIf="dropdownOption.selected[i] === 'Is Between'">
+              <div class="and-text" >
+                <div>and</div>
               </div>
-             <ng-container  *ngIf = "dropdownOption.selected[i] === 'Between'">
-               <div class="and-text">
-                 <div>and</div>
-               </div>
-               <div>
-                 <input *ngIf = "mod.inputType !== 'date'"  class="modifier-event-indicator" formControlName="valueB" [type]="mod.inputType">
-               </div>
-             </ng-container>
-              <ng-container *ngIf = "dropdownOption.selected[i] === 'Is Between'">
-                <div class="and-text" >
-                  <div>and</div>
-                </div>
-                <div>
-                  <input *ngIf = "mod.inputType === 'date'" class="modifier-calender" formControlName="valueB" [type]="mod.inputType" type="date" clrDate>
-                </div>
-              </ng-container>
+              <div>
+                <input *ngIf="mod.inputType === 'date'" class="modifier-calender" formControlName="valueB" [type]="mod.inputType" type="date" clrDate>
+              </div>
+            </ng-container>
+          </ng-container>
         </div>
     </div>
   </section>
 </form>
-<div class="container count-preview ">
+<div class="container count-preview">
   <div class="row">
     <div class="col-lg-2 ">
       <button type="button"
-              class="btn calculate-btn"
-              (click)="requestPreview()"
-              [disabled] = "!formChanges">
+        class="btn calculate-btn"
+        (click)="requestPreview()"
+        [disabled] = "!formChanges">
         Calculate
       </button>
     </div>
     <div class="spin-top-padding">
-      <span *ngIf="preview.get('requesting')" class="spinner spinner-inline"> Loading...   </span>
+      <span *ngIf="preview.get('requesting')" class="spinner spinner-inline"> Loading... </span>
     </div>
     <div class="col-lg-8 text-padding" *ngIf="preview.get('count') >= 0">
       <div class="result-text">
@@ -72,7 +79,7 @@
       <div>
         Number Participants:
         <span class="text-bold" *ngIf="!preview.get('requesting')">
-             {{ preview.get('count', 0) | number}}
+         {{ preview.get('count', 0) | number}}
         </span>
       </div>
     </div>
