[RW-1151] [risk=no]Clarity Date-picker Date Format should be YYYY-MM-DD and Right Panel scrollbar added (#1122)
*  RW-1092 date format fixed

*  RW-1151 wizard right panel scrollbar added

*  RW-1151  date conversion fixed

*  removed console log

* [RW-1217][risk=no] Bump machine size to n1-standard-2 (#1120)

* fix for failing test (#1123)

*  RW-1151 changes for PR

* [risk=no] Comment out PR template so it's only visible on creation (#1125)

* [RW-968][risk=no] Compile integration tests in Circle (#1126)

* [RW-1220][Risk=no] Add sidebar options (#1124)

* Add sidebar options

* PR comments

* RW-1230 fixed broken query. (#1127)

* [RW-1073][risk=no] UI for Measurements tree (#1121)

* RW-1073 add redux acctions for measurements api calls

* RW-1073 mock api call for subtree

* RW-1073 load subtree from search, scroll to match

* RW-1073 begin highlighting matches in subtree

* RW-1073 complete highlights for autocomplete matches

* RW-1073 fix import order error

* RW-1073 modify attributes actions for measurements

* RW-1073 add new api call for attributes list

* RW-1073 modify actions for attributes api call

* RW-1073 add mock api call data

* RW-1073 move predefined attributes to constants.ts

* RW-1073 meas attributes changes

* RW-1073 add categorical attributes to form

* RW-1073 fix modal title for measurements attributes

* RW-1073 add labs fields on attributes page

* RW-1073 remove predefinedAttributes references

* RW-1073 fix predifined attributes matching function

* RW-1073 update local csv files

* RW-1073 complete final api count calls

* RW-1073 complete styling and layout

* RW-1073 update local csv files

* RW-1073 fix tooltip display in selection list

* RW-1073 remove test criteria list

* [RW-1217][risk=no] Bump machine size to n1-standard-2 (#1120)

* fix for failing test (#1123)

* RW-1073 add descriptive functions for ngIfs

* [risk=no] Comment out PR temp

--- a/ui/src/app/cohort-search/modal/modal.component.css
+++ b/ui/src/app/cohort-search/modal/modal.component.css
@@ -22,7 +22,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: calc(100vw - calc(26rem + 60px));
+  width: calc(100vw - calc(19rem + 60px));
   background-color: white;
   border-radius: 4px;
   display: flex;
@@ -167,6 +167,8 @@ button.tab.active {
   overflow-y: auto;
   overflow-x: hidden;
   min-height: 27.5rem;
+  max-height: 27.5rem;
+  overflow-y: auto;
   background-color: white;
 }
 
