RW-1238 add function for showing counts

--- a/ui/src/app/cohort-search/node-info/node-info.component.html
+++ b/ui/src/app/cohort-search/node-info/node-info.component.html
@@ -28,11 +28,11 @@
     [innerHTML]="displayName | safeHtml"></div>
 
   <!-- COUNT -->
-  <div *ngIf="node.get('selectable')" class="count">
+  <div *ngIf="showCount()" class="count">
     <span class="text-muted">&#124;</span>
     <span class="badge badge-info">
       <span *ngIf="node.get('group')">~</span>
-      {{ node.get('count', 0) | number }}
+      {{ node.get('count') | number }}
     </span>
   </div>
 </div>
