--- a/ui/src/app/cohort-search/search-group-list/search-group-list.component.html
+++ b/ui/src/app/cohort-search/search-group-list/search-group-list.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="col-header">
-    <h2>{{ title | titlecase }}</h2>
+    <h2 class="participant-header">{{ title | titlecase }}</h2>
   </div>
 
   <!-- .size, not .length => this is an immutable.js list -->
