--- a/ui/src/app/cohort-search/search-group/search-group.component.html
+++ b/ui/src/app/cohort-search/search-group/search-group.component.html
@@ -3,7 +3,7 @@
   <div class="card-header">
     <clr-dropdown>
       <button type="button" class="btn selection-button" clrDropdownTrigger>
-        Select Criteria <clr-icon shape="caret down"></clr-icon>
+        Add Criteria <clr-icon shape="caret down"></clr-icon>
       </button>
       <clr-dropdown-menu clrPosition="bottom-left" *clrIfOpen>
         <h4 class="dropdown-header">Program Data</h4>
