--- a/ui/src/app/cohort-search/overview/overview.component.html
+++ b/ui/src/app/cohort-search/overview/overview.component.html
@@ -1,11 +1,11 @@
 <div>
   <div class="overview-header">
-    <h2 id="total-count">
+    <h2 class="count-header" id="total-count">
       Total Count:
       <span *ngIf="(isRequesting$ | async)" class="spinner spinner-sm">
         Loading...
       </span>
-      <span *ngIf="!(isRequesting$ | async)">
+      <span class="count-header" *ngIf="!(isRequesting$ | async)">
         {{ total$ | async | number }}
       </span>
     </h2>
@@ -22,7 +22,7 @@
 
   <ng-container *ngIf="chartData$ | async as chartData">
     <div class="card bg-faded">
-      <div class="card-header">
+      <div class="card-header header-text">
         Results by Gender
         <clr-icon shape="angle"
           [dir]="showGenderChart ? 'up' : 'down'"
@@ -37,7 +37,7 @@
     </div>
 
     <div class="card bg-faded">
-      <div class="card-header">
+      <div class="card-header header-text">
         Results By Gender, Age Range, and Race
         <clr-icon shape="sort-by"
           [class.is-info]="stackChart"
