--- a/ui/src/app/cohort-search/search-group-list/search-group-list.component.css
+++ b/ui/src/app/cohort-search/search-group-list/search-group-list.component.css
@@ -17,8 +17,13 @@ h2 {
 .and-circle {
   background-color: rgb(226, 226, 233);
   border-radius: 50%;
-  width: 2rem;
-  height: 2rem;
-  line-height: 2rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  line-height: 2.5rem;
   text-align: center;
+}
+
+.participant-header {
+  font-weight: bold;
+  font-size: 16px;
 }
