--- a/ui/src/app/cohort-search/overview/overview.component.html
+++ b/ui/src/app/cohort-search/overview/overview.component.html
@@ -9,11 +9,12 @@
         {{ total$ | async | number }}
       </span>
     </h2>
-    <div>
+    <div *ngIf="chartData$ | async as chartData">
       <button
         type="button"
         class="btn btn-primary"
         [style.margin-left]="'0'"
+        [disabled]="!chartData.size || (total$ | async | number) === 0"
         (click)="saveModal.open()">
         Save Cohort
       </button>
