RW-1245 explore link fixes

--- a/ui/src/app/cohort-search/modal/modal.component.css
+++ b/ui/src/app/cohort-search/modal/modal.component.css
@@ -197,6 +197,14 @@ h5.selection-title {
   padding-bottom: 0.5rem;
 }
 
+.explore-link {
+  padding-bottom: 0.8rem;
+}
+
+.explore-link >a:visited {
+  color: #007cbb;
+}
+
 @media all and (max-width: 900px) {
   .panel {
     flex-flow: column nowrap;
