--- a/ui/src/app/cohort-search/modal/modal.component.html
+++ b/ui/src/app/cohort-search/modal/modal.component.html
@@ -30,7 +30,7 @@
                 </button>
               </ng-container>
             </div>
-            <div *ngIf="ctype === domainType[domainType.DRUG]">
+            <div class="explore-link" *ngIf="ctype === domainType[domainType.DRUG]">
               <a href="https://mor.nlm.nih.gov/RxNav/" target="_blank">
                 Explore
               </a>
