--- a/ui/src/app/views/cohort-list/component.html
+++ b/ui/src/app/views/cohort-list/component.html
@@ -30,7 +30,7 @@
               Clone
             </button>
             <button class="action-item"
-                    routerLink="{{cohort.id}}/edit"
+                    (click)="beginEdit(cohort)"
                     [class.disabled]="actionsDisabled"
                     [disabled]="actionsDisabled">
               <clr-icon shape="pencil"></clr-icon>
@@ -66,5 +66,5 @@
     </div>
   </div>
 </div>
-
 <app-confirm-delete-modal [resourceType]="'cohort'" [resource]="cohortInFocus" (receiveDelete)="receiveDelete($event)"></app-confirm-delete-modal>
+<app-cohort-edit-modal [cohort]="cohortInFocus" (updateFinished)="updateFinished()"></app-cohort-edit-modal>
