--- a/public-ui/src/app/data-browser/concept-charts/concept-charts.component.html
+++ b/public-ui/src/app/data-browser/concept-charts/concept-charts.component.html
@@ -7,21 +7,21 @@
 <div *ngIf="!loading()" class="row concept-charts chart">
   <!-- show measurements binned by gender if we want -->
   <div class="col-md-4 col-xs-12 chart" *ngIf="showMeasurementGenderBins && analyses.measurementValueMaleAnalysis">
-    <app-chart [chartType]="'histogram'" [chartTitle]="makeChartTitle(maleGenderResult)"
+    <app-chart [chartType]="'histogram'" [chartTitle]="maleGenderChartTitle"
                [analysis]="analyses.measurementValueMaleAnalysis" [backgroundColor]="backgroundColor">
     </app-chart>
   </div>
 
   <div class="col-md-4 col-xs-12 chart" *ngIf="showMeasurementGenderBins &&
     analyses.measurementValueFemaleAnalysis && analyses.measurementValueFemaleAnalysis.results.length">
-    <app-chart [chartType]="'histogram'" [chartTitle]="makeChartTitle(femaleGenderResult)" [chartType]="histogram"
+    <app-chart [chartType]="'histogram'" [chartTitle]="femaleGenderChartTitle" [chartType]="histogram"
                [analysis]="analyses.measurementValueFemaleAnalysis" [backgroundColor]="backgroundColor">
     </app-chart>
   </div>
 
   <div class="col-md-4 col-xs-12 chart" *ngIf="showMeasurementGenderBins &&
     analyses.measurementValueOtherGenderAnalysis && analyses.measurementValueOtherGenderAnalysis.results.length">
-    <app-chart [chartType]="'histogram'" [chartTitle]="makeChartTitle(otherGenderResult)" [chartType]="histogram"
+    <app-chart [chartType]="'histogram'" [chartTitle]="otherGenderChartTitle" [chartType]="histogram"
                [analysis]="analyses.measurementValueOtherGenderAnalysis" [backgroundColor]="backgroundColor">
     </app-chart>
   </div>
