--- a/public-ui/src/app/views/survey-view/survey-view.component.html
+++ b/public-ui/src/app/views/survey-view/survey-view.component.html
@@ -102,7 +102,7 @@
 
           <div class="col-xs-12 col-sm-12">
             <div class="box-title"> Question {{i + 1}}</div>
-            <div class="box-sub-title question" innerHtml="{{ q.conceptName | highlightSearch : searchText.value}})">   </div>
+            <div class="box-sub-title question" innerHtml="{{ q.conceptName | highlightSearch : searchText.value}} -- {{q.conceptId}}">   </div>
           </div>
 
         </div>
@@ -137,7 +137,7 @@
                 <app-chart [analysis]="q.genderAnalysis" [selectedResult]="q.selectedAnswer" [backgroundColor]="'#D9E4EA'"></app-chart>
               </div>
               <div class="chart-wrapper age col-xs-12 col-sm-12">
-                <app-chart [analysis]="q.ageAnalysis" [selectedResult]="q.selectedAnswer" [backgroundColor]="'#D9E4EA'"></app-chart>
+                <app-chart [analysis]="q.ageAnalysis" [selectedResult]="q.selectedAnswer" [pointWidth]="20" [backgroundColor]="'#D9E4EA'"></app-chart>
               </div>
 
             </div>
