--- a/ui/src/app/cohort-search/modifier-page/modifier-page.component.css
+++ b/ui/src/app/cohort-search/modifier-page/modifier-page.component.css
@@ -112,6 +112,12 @@
     width: 8rem !important;
 }
 
+.greyed-button {
+    pointer-events: none;
+    opacity: 0.3;
+    background-color: #c3c3c3!important;
+    border-radius: 0.125rem;
+}
 .label-flex {
     display: flex;
     padding-top: 1.4rem;
