[RW-1237][risk=no]Bug - search page "save cohort" button not disabled when it should be (#1136)
*  RW-1237 search page save cohort button disabled functionality changes

*  RW-1237 number pipe removed

*  RW-1237 changes for push

--- a/ui/src/app/cohort-search/overview/overview.component.html
+++ b/ui/src/app/cohort-search/overview/overview.component.html
@@ -9,11 +9,12 @@
         {{ total$ | async | number }}
       </span>
     </h2>
-    <div>
+    <div *ngIf="chartData$ | async as chartData">
       <button
         type="button"
         class="btn btn-primary"
         [style.margin-left]="'0'"
+        [disabled]="!chartData.size || (total$ | async) === 0"
         (click)="saveModal.open()">
         Save Cohort
       </button>
@@ -35,7 +36,6 @@
         </app-gender-chart>
       </div>
     </div>
-
     <div class="card bg-faded">
       <div class="card-header header-text">
         Results By Gender, Age Range, and Race
