--- a/ui/src/app/cohort-search/modal/modal.component.css
+++ b/ui/src/app/cohort-search/modal/modal.component.css
@@ -37,7 +37,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  height:59px;
+  height: 59px;
   margin-top: 0.5rem;
 }
 
@@ -50,11 +50,13 @@
 .vbar {
   align-self: center;
   display: inline-block;
-  margin: 0 0.75rem;
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
   box-sizing: border-box;
-  height: 0.99rem;
+  height: 26px;
   width: 1px;
   border: 1px solid #979797;
+  margin-bottom: 0.5rem
 }
 
 .nav-link.active {
