linting. Comment out link to mockup

--- a/public-ui/src/app/views/pm/pm.component.html
+++ b/public-ui/src/app/views/pm/pm.component.html
@@ -56,13 +56,14 @@
       </div>
     </div>
 
+    <!-- Don't want to deploy this link
     <div class="row page-align">
       <p>
         <a target="_blank" href="https://projects.invisionapp.com/d/main/default/#/console/13577480/306624424/preview" >
         Link to Mock Up
         </a>
       </p>
-    </div>
+    </div> -->
 
   </div>
   <div class="col-xs-12 col-sm-12 col-md-3">
