--- a/ui/src/app/cohort-search/modifier-page/modifier-page.component.css
+++ b/ui/src/app/cohort-search/modifier-page/modifier-page.component.css
@@ -117,8 +117,8 @@
     opacity: 0.3;
     background-color: #c3c3c3!important;
     border-radius: 0.125rem;
-}
-.label-flex {
+    border: transparent!important;
+}.label-flex {
     display: flex;
     padding-top: 1.4rem;
     padding-bottom: 0.1rem;
