RW-1249 calculate button disabled and spinner changes

--- a/ui/src/app/cohort-search/modifier-page/modifier-page.component.css
+++ b/ui/src/app/cohort-search/modifier-page/modifier-page.component.css
@@ -121,4 +121,5 @@
     opacity: 0.3;
     background-color: #c3c3c3!important;
     border-radius: 0.125rem;
+    border: transparent!important;
 }
